# tauri-live-captions

./: .prettierignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hook.rs  lib.rs  main.rs
src/components/: Progress.tsx  VoiceActivityDetection.tsx
src/containers/: Captions.tsx
src/utils/: constants.ts  helpers.ts  types.ts  updater.ts
src/workers/: captionsWorker.ts
